# hello-mcp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  request.json  server.py
